<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etEditNameProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombre_del_producto"
        android:inputType="text"/>


    <EditText
        android:id="@+id/etEditDescriptionProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/descripci_n"
        android:inputType="text"/>

    <Button
        android:id="@+id/btnEditProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/editar"
        android:backgroundTint="@color/greencito"/>

    <Button
        android:id="@+id/btnEditCloseDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/cerrar"
        android:backgroundTint="@color/greencito"/>
</LinearLayout>